--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <span>traffiki</span>
                     </button>
                     <button class="btn btn-dark d-inline-block ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-align-justify"></i>
+                        <i class="fa fa-user"></i>
                     </button>
 
                 </div>
@@ -117,6 +117,43 @@
                         </div> 
                 </div>
             </div>
+
+             <!-- homer specific start -->
+            <div class="container">
+                <h1>My Profile</h1>
+                <div class="row">
+                        <div class="col-md-4 p-2 " style="min-width: 115px;" >
+                            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                              <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Personal Information</a>
+                              <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Traffiki Wallet</a>
+                            </div>
+                        </div>
+                         <div class="col-md-8 p-2" style="min-width: 115px;" >
+                            <div class="tab-content" id="v-pills-tabContent">
+                              <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                                    <div class="card card-body" style="min-height: 200px;background: rgba(245, 245, 245, 0.2);color: #000000;">
+                                        <h3>Basic Information</h3>
+                                        <p>Name: Tolulope Olanrewaju</p>
+                                        <p>Username: Toluwa</p>
+                                        <p>E-mail Address: lanre.toluwa@gmail.com</p>
+                                        <p>Username: Toluwa</p>
+                                        
+                                        <p>Residential Address: 34, Santos Avenue, Lagos, Nigeria</p>
+                                    </div>
+                              </div>
+                              <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                                    <div class="card card-body" style="min-height: 200px;background: rgba(245, 245, 245, 0.2);color: #000000;">
+                                        <h3>Balance</h3>
+                                        <p>My Traffiken: &#8358;5450.80</p>
+                                    </div>
+                              </div>
+                
+                            </div>
+                        </div>
+                </div>
+
+            </div>
+            <!-- homer specific end -->
         </div>
     </div>
 
