--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
         <!-- Page Content  -->
         <div id="main-container">
 
-             <nav class="navbar navbar-expand-lg navbar-light bg-light">
+             <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #2f4f4f;">
                 <div class="container-fluid">
 
-                    <button type="button" id="sidebarCollapse" class="btn btn-info">
+                    <button type="button" id="sidebarCollapse" class="btn" style="background-color: #2f4f4f;color: #fff;">
                         <i class="fas fa-align-left"></i>
                         <span>traffiki</span>
                     </button>
-                    <button class="btn btn-dark d-inline-block ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="btn d-inline-block ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="background-color: #2f4f4f;color: #fff;">
                         <i class="fa fa-user"></i>
                     </button>
 
