--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                             <div class="card-body">
                                 <input type="radio" name="select-payment-platform" id="Traffiken" value="Traffiken" />
                                 <h5>Traffiken wallet</h5>
-                                <label for="Traffiken"><img src="images/Traffiken.png" alt="" class="img-fluid" /></label>
+                                <label for="Traffiken"><img src="images/traffiken.PNG" alt="" class="img-fluid" /></label>
                             </div>
                         </div>
                     </div>
